[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://assets/Images/Menu/Padrão3.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Menu/Padrão2.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/Menu/Padrão1.png" type="Texture" id=4]
[ext_resource path="res://assets/Themes/CharacterChoice.tres" type="Theme" id=5]
[ext_resource path="res://assets/Images/icons/next.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/icons/previous.png" type="Texture" id=7]
[ext_resource path="res://scenes/NucleoBandeirante/PhotoAnalyze2.gd" type="Script" id=8]
[ext_resource path="res://assets/Images/AnáliseDeFotos/Foto 5.png" type="Texture" id=9]
[ext_resource path="res://scenes/AuxScenes/Button.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Images/AnáliseDeFotos/circulo.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/AnáliseDeFotos/Foto 4.png" type="Texture" id=12]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/AuxScenes/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Images/diary/livros2.png" type="Texture" id=15]
[ext_resource path="res://assets/Images/AnáliseDeFotos/Foto 3.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.972549, 0.882353, 0.435294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.45098, 0.533333, 0.556863, 0 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_right = 3.0
shadow_color = Color( 0.0941176, 0.0627451, 0.0627451, 0.0784314 )
shadow_size = 1
shadow_offset = Vector2( 1, 2 )

[sub_resource type="Animation" id=6]
resource_name = "Instruction"
length = 1.3

[sub_resource type="StyleBoxFlat" id=9]
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.141176, 0.0470588, 0.0470588, 1 )
border_blend = true

[sub_resource type="Animation" id=10]
resource_name = "Popmenssage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("UnlockedSkill/Skill:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.615573, 1 ),
"update": 0,
"values": [ Vector2( 249.455, 927.819 ), Vector2( 249.455, -190.909 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UnlockedSkill/Skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0666667 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fade_Popup/Fade:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.670588 ) ]
}

[node name="PhotoAnalyze" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="BackGround2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.945098, 0.933333, 0.905882, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Subackground01" type="Sprite" parent="BackGround2"]
position = Vector2( 214, 467 )
scale = Vector2( 1.07312, 1.0007 )
texture = ExtResource( 2 )

[node name="Subackground02" type="Sprite" parent="BackGround2"]
position = Vector2( 869, 417 )
scale = Vector2( 0.80249, 0.809894 )
texture = ExtResource( 4 )

[node name="Subackground03" type="Sprite" parent="BackGround2"]
position = Vector2( 861, 116 )
scale = Vector2( 1.10653, 0.91619 )
texture = ExtResource( 3 )

[node name="Next" type="Button" parent="."]
margin_left = 810.0
margin_top = 252.0
margin_right = 842.0
margin_bottom = 328.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Prev" type="Button" parent="."]
margin_left = 159.0
margin_top = 249.0
margin_right = 195.0
margin_bottom = 325.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 7 )

[node name="Button" parent="." instance=ExtResource( 10 )]
margin_left = 880.0
margin_top = 528.0
margin_right = 992.0
margin_bottom = 564.0
text = "Proximo"

[node name="InstructionAnimation" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Instruction = SubResource( 6 )

[node name="PhotoPanel" type="Panel" parent="."]
margin_left = 257.0
margin_top = 48.0
margin_right = 769.0
margin_bottom = 551.0
custom_styles/panel = SubResource( 9 )

[node name="PhotoOne" type="Sprite" parent="PhotoPanel"]
position = Vector2( 255, 252 )
scale = Vector2( 0.618557, 0.587796 )
texture = ExtResource( 9 )

[node name="PhotoTwo" type="Sprite" parent="PhotoPanel"]
visible = false
position = Vector2( 257, 252 )
scale = Vector2( 0.596059, 0.592221 )
texture = ExtResource( 12 )

[node name="ThirdClue" type="Sprite" parent="PhotoPanel/PhotoTwo"]
visible = false
position = Vector2( 109.079, -100.198 )
scale = Vector2( 2.60884, 1.1788 )
texture = ExtResource( 11 )

[node name="ThirdButton" type="TextureButton" parent="PhotoPanel/PhotoTwo"]
margin_left = -125.048
margin_top = -204.675
margin_right = 329.952
margin_bottom = 10.325

[node name="PhotoThree" type="Sprite" parent="PhotoPanel"]
visible = false
position = Vector2( 255.563, 249.523 )
scale = Vector2( 0.617903, 0.591946 )
texture = ExtResource( 16 )

[node name="FourthClue" type="Sprite" parent="PhotoPanel/PhotoThree"]
visible = false
position = Vector2( -52.6992, -2.57285 )
scale = Vector2( 2.77554, 1.81448 )
texture = ExtResource( 11 )

[node name="FourthButton" type="TextureButton" parent="PhotoPanel/PhotoThree"]
margin_left = -247.0
margin_top = -151.0
margin_right = 142.0
margin_bottom = 133.0

[node name="FirstQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 136.0
margin_right = 403.0
margin_bottom = 301.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="FirstQuestion" type="Label" parent="FirstQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.5
margin_top = -97.5
margin_right = 331.5
margin_bottom = 96.5
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Observe as experessões das pessoas. O que elas demonstram?
A) alegria
B) apreensão
c) raiva"
align = 1
valign = 1
autowrap = true

[node name="FirstAnswer" type="TextureButton" parent="FirstQuestion"]
margin_left = 263.0
margin_top = 81.0
margin_right = 395.0
margin_bottom = 112.0

[node name="SecondQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 136.0
margin_right = 403.0
margin_bottom = 301.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="SecondQuestion" type="Label" parent="SecondQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -82.5
margin_right = 329.0
margin_bottom = 82.5
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Há mulheres na foto?
A) sim
B) não"
align = 1
valign = 1
autowrap = true

[node name="SecondAnswer" type="TextureButton" parent="SecondQuestion"]
margin_left = 294.0
margin_top = 61.0
margin_right = 365.0
margin_bottom = 101.0

[node name="ThirdQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 136.0
margin_right = 403.0
margin_bottom = 305.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="ThirdQuestion" type="Label" parent="ThirdQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -84.5
margin_right = 323.0
margin_bottom = 84.5
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Perceba que há um hotel na foto, quem são essas pessoas perto dele?
A) Homens
B) Mulheres"
align = 1
valign = 1
autowrap = true

[node name="ThirdAnswer" type="TextureButton" parent="ThirdQuestion"]
margin_left = 263.0
margin_top = 122.0
margin_right = 386.0
margin_bottom = 163.0

[node name="FourthQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 136.0
margin_right = 403.0
margin_bottom = 305.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="FourthQuestion" type="Label" parent="FourthQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -84.5
margin_right = 323.0
margin_bottom = 84.5
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Aqui temos a mesma multidão, por outro ângulo."
align = 1
valign = 1
autowrap = true

[node name="FifthQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.0
margin_top = 104.0
margin_right = 404.0
margin_bottom = 314.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="FifthQuestion" type="Label" parent="FifthQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.5
margin_top = -91.0
margin_right = 323.5
margin_bottom = 101.0
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Parece haver um palanque, não é mesmo. E as pessoas em destaque as pessoas em destaque se vestem de maneira diferente das que ouvem?
a) Não
b) Sim, usam ternos e carregam uma bandeira do Brasil"
align = 1
valign = 1
autowrap = true

[node name="FifthAnswer" type="TextureButton" parent="FifthQuestion"]
margin_left = 53.0
margin_top = 173.0
margin_right = 605.0
margin_bottom = 202.0

[node name="SixthQuestion" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 115.0
margin_right = 403.0
margin_bottom = 330.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="SixthQuestion" type="Label" parent="SixthQuestion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -96.0455
margin_right = 323.0
margin_bottom = 95.9545
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Observando mais de perto quem discursa, vemos que há um personagem central. Quem é ele?
a) Juscelino Kubitschek, senador eleito por GO
b) Darcy Ribeiro, chefe da Casa Civil do Governo João Goulart
c) Oscar Niemeyer, arquiteto que construiu Brasília"
align = 1
valign = 1
autowrap = true

[node name="SixthAnswer" type="TextureButton" parent="SixthQuestion"]
margin_left = 20.0
margin_top = 127.0
margin_right = 630.0
margin_bottom = 163.0

[node name="PlayerBackPack" parent="." instance=ExtResource( 13 )]
visible = false

[node name="MinigameExplanation" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -96.0
margin_right = 367.0
margin_bottom = 102.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="MinigameMensage" type="Label" parent="MinigameExplanation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.136
margin_top = -139.727
margin_right = 287.864
margin_bottom = 150.273
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Você chegou até uma grande multidão. Analise as fotos e responda as perguntas a seguir."
align = 1
valign = 1
autowrap = true

[node name="Fade_Popup" type="Popup" parent="."]
margin_left = 295.0
margin_top = 157.0
margin_right = 335.0
margin_bottom = 197.0

[node name="Fade" type="Panel" parent="Fade_Popup"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -297.0
margin_top = -157.0
margin_right = 728.0
margin_bottom = 422.0

[node name="UnlockedSkill" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 112.0
margin_right = 297.0
margin_bottom = 312.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="Skill" type="Sprite" parent="UnlockedSkill"]
modulate = Color( 1, 1, 1, 0.0666667 )
position = Vector2( 249.455, 927.819 )
scale = Vector2( 0.564662, 0.564662 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="UnlockedSkill"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.627
anchor_bottom = 0.5
margin_left = -243.227
margin_top = -91.0909
margin_right = 179.67
margin_bottom = 91.9091
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Parabens! Você desbloqueou a habilidade curiosidade."
align = 1
valign = 1
autowrap = true

[node name="UnlockedSkillAnimation" type="AnimationPlayer" parent="."]
anims/Popmenssage = SubResource( 10 )

[node name="Player" parent="." instance=ExtResource( 14 )]

[node name="ClueMensage" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -96.0
margin_right = 367.0
margin_bottom = 102.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 5 )

[node name="Label" type="Label" parent="ClueMensage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.136
margin_top = -139.727
margin_right = 287.864
margin_bottom = 150.273
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "aaa"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Next" to="." method="next_image"]
[connection signal="pressed" from="Prev" to="." method="previous_image"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="PhotoPanel/PhotoTwo/ThirdButton" to="." method="_on_ThirdButton_button_down"]
[connection signal="button_down" from="PhotoPanel/PhotoThree/FourthButton" to="." method="_on_FourthButton_button_down"]
[connection signal="button_down" from="FirstQuestion/FirstAnswer" to="." method="_on_FirstAnswer_button_down"]
[connection signal="button_down" from="SecondQuestion/SecondAnswer" to="." method="_on_SecondAnswer_button_down"]
[connection signal="button_down" from="ThirdQuestion/ThirdAnswer" to="." method="_on_ThirdAnswer_button_down"]
[connection signal="popup_hide" from="FourthQuestion" to="." method="_on_FourthQuestion_popup_hide"]
[connection signal="button_down" from="FifthQuestion/FifthAnswer" to="." method="_on_FifthAnswer_button_down"]
[connection signal="button_down" from="SixthQuestion/SixthAnswer" to="." method="_on_SixthAnswer_button_down"]
[connection signal="popup_hide" from="MinigameExplanation" to="." method="_on_MinigameExplanation_popup_hide"]
[connection signal="popup_hide" from="UnlockedSkill" to="." method="_on_UnlockedSkill_popup_hide"]
[connection signal="popup_hide" from="ClueMensage" to="." method="_on_ClueMensage_popup_hide"]
